--- a/config/database.yml
+++ b/config/database.yml
@@ -97,3 +97,4 @@ production:
   database: tokanipostgres
   username: <%= ENV['DATABASE_USERNAME'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
+  port: 5432
