--- a/config/database.yml
+++ b/config/database.yml
@@ -91,10 +91,16 @@ staging:
   database: tokani_staging
   password: <%= Rails.application.credentials.dig(:database, :password) %>
 
+# production:
+#   <<: *default
+#   host: <%= ENV['DATABASE_URL'] %>
+#   database: tokanipostgres
+#   username: <%= ENV['DATABASE_USERNAME'] %>
+#   password: <%= ENV['DATABASE_PASSWORD'] %>
+#   port: 5432
+
 production:
   <<: *default
-  host: <%= ENV['DATABASE_URL'] %>
-  database: tokanipostgres
-  username: <%= ENV['DATABASE_USERNAME'] %>
+  database: tokani_production
+  username: postgres
   password: <%= ENV['DATABASE_PASSWORD'] %>
-  port: 5432
