--- a/test/fixtures/appointments.yml
+++ b/test/fixtures/appointments.yml
@@ -26,6 +26,18 @@
 #  time_zone               :string
 #  created_at              :datetime         not null
 #  updated_at              :datetime         not null
+#  agency_id               :bigint
+#  customer_id             :bigint
+#
+# Indexes
+#
+#  index_appointments_on_agency_id    (agency_id)
+#  index_appointments_on_customer_id  (customer_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (agency_id => accounts.id)
+#  fk_rails_...  (customer_id => accounts.id)
 #
 
 one:
