tests ran - some failing

--- a/test/fixtures/account_users.yml
+++ b/test/fixtures/account_users.yml
@@ -32,6 +32,12 @@ two:
   roles:
     admin: true
 
+three:
+  user: one
+  account: one
+  roles:
+    interpreter: true
+
 company_admin:
   account: company
   user: one
