updated interpreter detail relating to user/interpreter

--- a/test/fixtures/interpreter_details.yml
+++ b/test/fixtures/interpreter_details.yml
@@ -18,25 +18,25 @@
 #  zip                     :string
 #  created_at              :datetime         not null
 #  updated_at              :datetime         not null
-#  user_id                 :bigint
+#  interpreter_id          :bigint
 #
 # Indexes
 #
-#  index_interpreter_details_on_user_id  (user_id)
+#  index_interpreter_details_on_interpreter_id  (interpreter_id)
 #
 # Foreign Keys
 #
-#  fk_rails_...  (user_id => users.id)
+#  fk_rails_...  (interpreter_id => users.id)
 #
 
 one:
   interpreter_type: 1
   gender: 1
   primary_phone: MyString
-  user: one
+  interpreter: one
  
 
 two:
   interpreter_type: 1
   gender: 1
-  primary_phone: MyString
+  interpreter: two
