--- a/test/fixtures/account_invitations.yml
+++ b/test/fixtures/account_invitations.yml
@@ -10,7 +10,7 @@
 #  created_at    :datetime         not null
 #  updated_at    :datetime         not null
 #  account_id    :bigint           not null
-#  invited_by_id :bigint
+#  invited_by_id :uuid
 #
 # Indexes
 #
@@ -21,7 +21,6 @@
 # Foreign Keys
 #
 #  fk_rails_...  (account_id => accounts.id)
-#  fk_rails_...  (invited_by_id => users.id)
 #
 
 one:
