--- a/test/fixtures/account_users.yml
+++ b/test/fixtures/account_users.yml
@@ -7,7 +7,7 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  account_id :bigint
-#  user_id    :bigint
+#  user_id    :uuid
 #
 # Indexes
 #
@@ -17,7 +17,6 @@
 # Foreign Keys
 #
 #  fk_rails_...  (account_id => accounts.id)
-#  fk_rails_...  (user_id => users.id)
 #
 
 one:
