--- a/test/fixtures/api_tokens.yml
+++ b/test/fixtures/api_tokens.yml
@@ -11,16 +11,12 @@
 #  transient    :boolean          default(FALSE)
 #  created_at   :datetime         not null
 #  updated_at   :datetime         not null
-#  user_id      :bigint           not null
+#  user_id      :uuid
 #
 # Indexes
 #
 #  index_api_tokens_on_token    (token) UNIQUE
 #  index_api_tokens_on_user_id  (user_id)
-#
-# Foreign Keys
-#
-#  fk_rails_...  (user_id => users.id)
 #
 
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
