--- a/config/jumpstart.yml
+++ b/config/jumpstart.yml
@@ -7,7 +7,7 @@ default_from_email: Tokani <support@tokani.com>
 business_address: |-
   5921 Sutter Ave.
   Carmichael, California 95608
-background_job_processor: async
+background_job_processor: sidekiq
 email_provider: mailjet
 personal_accounts: true
 solargraph: false
