--- a/test/fixtures/account_invitations.yml
+++ b/test/fixtures/account_invitations.yml
@@ -9,7 +9,7 @@
 #  token         :string           not null
 #  created_at    :datetime         not null
 #  updated_at    :datetime         not null
-#  account_id    :bigint           not null
+#  account_id    :uuid             not null
 #  invited_by_id :uuid
 #
 # Indexes
@@ -17,10 +17,6 @@
 #  index_account_invitations_on_account_id     (account_id)
 #  index_account_invitations_on_invited_by_id  (invited_by_id)
 #  index_account_invitations_on_token          (token) UNIQUE
-#
-# Foreign Keys
-#
-#  fk_rails_...  (account_id => accounts.id)
 #
 
 one:
