--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -31,31 +31,36 @@
 #  index_accounts_on_created_at  (created_at)
 #  index_accounts_on_owner_id    (owner_id)
 #
+# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
 one:
-  owner: one
-  name: "User One"
-  personal: true
+  name: MyString
+  contact_name: MyString
+  email: MyString
+  address: MyString
+  city: MyString
+  state: MyString
+  zip: MyString
+  is_active: false
+  notes: MyText
+  fax: MyString
+  phone: MyString
+  appointments_in_person: false
+  appointments_video: false
+  appointments_phone: false
 
 two:
-  owner: two
-  name: "User Two"
-  personal: true
-
-company:
-  owner: one
-  name: "Company"
-  personal: false
-  domain: company.com
-  subdomain: company
-
-invited:
-  owner: invited
-  name: "Invited User"
-  personal: true
+  name: MyString
+  contact_name: MyString
+  email: MyString
+  address: MyString
+  city: MyString
+  state: MyString
+  zip: MyString
+  is_active: false
+  notes: MyText
+  fax: MyString
+  phone: MyString
+  appointments_in_person: false
+  appointments_video: false
+  appointments_phone: false
