--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss-import": "^15.0.1",
     "slim-select": "2.3.0",
     "stimulus-flatpickr": "^3.0.0-0",
+    "stimulus-password-visibility": "^2.0.0",
     "tailwindcss": "^3.2.4",
     "tailwindcss-stimulus-components": "^3.0.4",
     "tippy.js": "^6.3.5",
