--- a/test/fixtures/requestor_details.yml
+++ b/test/fixtures/requestor_details.yml
@@ -25,8 +25,16 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+
+one:
+  requestor_type: 1
+  primary_phone: MyString
+  requestor: one
+ 
+
+two:
+  requestor_type: 2
+  primary_phone: MyString
+  requestor: two
+
+
