--- a/test/fixtures/agencies.yml
+++ b/test/fixtures/agencies.yml
@@ -20,31 +20,14 @@
 #  index_accounts_on_created_at  (created_at)
 #  index_accounts_on_owner_id    (owner_id)
 #
-
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
+# model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one:
-  owner: one
-  name: "User One"
-  personal: true
-
-two:
-  owner: two
-  name: "User Two"
-  personal: true
-
-company:
-  owner: one
-  name: "Company"
-  personal: false
-  domain: company.com
-  subdomain: company
-
-invited:
-  owner: invited
-  name: "Invited User"
-  personal: true
+one: {}
+# column: value
+#
+two: {}
+# column: value
