--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
+    "chart.js": "^4.2.0",
+    "chartkick": "^5.0.1",
     "chokidar": "^3.5.2",
     "clipboard": "^2.0.8",
     "esbuild": "^0.16.17",
