added scope and methods on appointment status that sets the current status to the most recently created status for an appointment and a method to allow easy calling of current status on appointment model

--- a/test/fixtures/appointment_statuses.yml
+++ b/test/fixtures/appointment_statuses.yml
@@ -7,8 +7,16 @@
 #  name           :integer
 #  created_at     :datetime         not null
 #  updated_at     :datetime         not null
-#  appointment_id :uuid             not null
+#  appointment_id :bigint
 #  user_id        :uuid             not null
+#
+# Indexes
+#
+#  index_appointment_statuses_on_appointment_id  (appointment_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (appointment_id => appointments.id)
 #
 
 one:
