--- a/test/fixtures/agency_customers.yml
+++ b/test/fixtures/agency_customers.yml
@@ -2,16 +2,22 @@
 #
 # Table name: agency_customers
 #
-#  id          :bigint           not null, primary key
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
-#  agency_id   :uuid
-#  customer_id :uuid
+#  id                   :bigint           not null, primary key
+#  created_at           :datetime         not null
+#  updated_at           :datetime         not null
+#  agency_id            :uuid
+#  customer_category_id :bigint
+#  customer_id          :uuid
 #
 # Indexes
 #
-#  index_agency_customers_on_agency_id    (agency_id)
-#  index_agency_customers_on_customer_id  (customer_id)
+#  index_agency_customers_on_agency_id             (agency_id)
+#  index_agency_customers_on_customer_category_id  (customer_category_id)
+#  index_agency_customers_on_customer_id           (customer_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (customer_category_id => customer_categories.id)
 #
 
 # This model initially had no columns defined. If you add columns to the
