--- a/test/fixtures/recipients.yml
+++ b/test/fixtures/recipients.yml
@@ -1,3 +1,4 @@
+# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 # == Schema Information
 #
 # Table name: recipients
