--- a/test/fixtures/recipients.yml
+++ b/test/fixtures/recipients.yml
@@ -3,7 +3,7 @@
 #
 # Table name: recipients
 #
-#  id            :bigint           not null, primary key
+#  id            :uuid             not null, primary key
 #  allow_email   :boolean
 #  allow_text    :boolean
 #  email         :string
