--- a/test/fixtures/appointments.yml
+++ b/test/fixtures/appointments.yml
@@ -30,20 +30,41 @@
 #  time_zone                :string
 #  total_billed             :decimal(, )
 #  total_paid               :decimal(, )
+#  video_link               :string
 #  created_at               :datetime         not null
 #  updated_at               :datetime         not null
 #  agency_id                :uuid
 #  customer_id              :uuid
+#  department_id            :uuid
 #  interpreter_id           :uuid
+#  language_id              :bigint           not null
 #  pay_bill_config_id       :integer
 #  pay_bill_rate_id         :integer
+#  provider_id              :uuid
+#  recipient_id             :uuid
+#  requestor_id             :uuid
 #  site_id                  :uuid
 #
 # Indexes
 #
 #  index_appointments_on_agency_id       (agency_id)
 #  index_appointments_on_customer_id     (customer_id)
+#  index_appointments_on_department_id   (department_id)
 #  index_appointments_on_interpreter_id  (interpreter_id)
+#  index_appointments_on_language_id     (language_id)
+#  index_appointments_on_provider_id     (provider_id)
+#  index_appointments_on_recipient_id    (recipient_id)
+#  index_appointments_on_requestor_id    (requestor_id)
+#  index_appointments_on_site_id         (site_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (department_id => departments.id)
+#  fk_rails_...  (language_id => languages.id)
+#  fk_rails_...  (provider_id => providers.id)
+#  fk_rails_...  (recipient_id => recipients.id)
+#  fk_rails_...  (requestor_id => users.id)
+#  fk_rails_...  (site_id => sites.id)
 #
 
 one:
@@ -68,6 +89,7 @@ one:
   confirmation_phone: MyString
   confirmation_notes: MyText
   home_health_appointment: false
+  language: one
 
 two:
   ref_number: MyString
@@ -91,3 +113,4 @@ two:
   confirmation_phone: MyString
   confirmation_notes: MyText
   home_health_appointment: false
+  language: two
