TK-169 and standardrb fixes and tests passing

--- a/test/fixtures/customer_categories.yml
+++ b/test/fixtures/customer_categories.yml
@@ -26,7 +26,7 @@ one:
   video_prefix: MyString
   backport_id: 
   sort_order: 
-  is_active: false
+  is_active: true
 
 two:
   display_value: MyString
