--- a/test/fixtures/connected_accounts.yml
+++ b/test/fixtures/connected_accounts.yml
@@ -13,11 +13,11 @@
 #  uid                 :string
 #  created_at          :datetime         not null
 #  updated_at          :datetime         not null
-#  user_id             :uuid
+#  owner_id            :uuid
 #
 # Indexes
 #
-#  index_user_connected_accounts_on_user_id  (user_id)
+#  index_connected_accounts_on_owner_id_and_owner_type  (owner_id,owner_type)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
