--- a/config/jumpstart.yml
+++ b/config/jumpstart.yml
@@ -14,7 +14,7 @@ solargraph: false
 register_with_account: true
 apns: false
 fcm: false
-collect_billing_address: false
+collect_billing_address: true
 integrations:
 - honeybadger
 multitenancy:
