--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "chartkick": "^5.0.1",
     "chokidar": "^3.5.2",
     "clipboard": "^2.0.8",
+    "dropzone": "^6.0.0-beta.2",
     "esbuild": "^0.17.11",
     "esbuild-rails": "^1.0.3",
     "flatpickr": "^4.6.10",
+    "flowbite": "^1.6.4",
     "glob": "^9.2.1",
     "js-cookie": "^3.0.1",
     "jstz": "^2.1.1",
@@ -38,8 +40,7 @@
     "tippy.js": "^6.3.5",
     "tom-select": "^2.2.2",
     "tributejs": "^5.1.3",
-    "trix": "^2.0.4",
-    "dropzone": "^6.0.0-beta.2"
+    "trix": "^2.0.4"
   },
   "scripts": {
     "build:css": "tailwindcss --postcss --minify -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css",
