--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chartkick": "^5.0.1",
     "chokidar": "^3.5.2",
     "clipboard": "^2.0.8",
+    "debounce": "^1.2.1",
     "dropzone": "^6.0.0-beta.2",
     "esbuild": "^0.17.15",
     "esbuild-rails": "^1.0.4",
