--- a/test/fixtures/checklist_types.yml
+++ b/test/fixtures/checklist_types.yml
@@ -1,4 +1,25 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: checklist_types
+#
+#  id                  :bigint           not null, primary key
+#  format              :integer
+#  is_active           :boolean          default(TRUE), not null
+#  name                :string
+#  requires_expiration :boolean
+#  requires_upload     :boolean
+#  created_at          :datetime         not null
+#  updated_at          :datetime         not null
+#  account_id          :uuid             not null
+#
+# Indexes
+#
+#  index_checklist_types_on_account_id  (account_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (account_id => accounts.id)
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
