TK-247 - Checklist Item Expiration Notifications

--- a/test/fixtures/notification_settings.yml
+++ b/test/fixtures/notification_settings.yml
@@ -2,19 +2,20 @@
 #
 # Table name: notification_settings
 #
-#  id                    :bigint           not null, primary key
-#  appointment_cancelled :boolean          default(TRUE)
-#  appointment_covered   :boolean          default(TRUE)
-#  appointment_created   :boolean          default(TRUE)
-#  appointment_declined  :boolean          default(TRUE)
-#  appointment_edited    :boolean          default(TRUE)
-#  appointment_offered   :boolean          default(TRUE)
-#  appointment_reminder  :boolean          default(TRUE)
-#  appointment_scheduled :boolean          default(TRUE)
-#  interpreter_cancelled :boolean          default(TRUE)
-#  sms                   :integer          default("no_sms")
-#  sms_number            :string
-#  created_at            :datetime         not null
-#  updated_at            :datetime         not null
-#  user_id               :uuid
+#  id                        :bigint           not null, primary key
+#  appointment_cancelled     :boolean          default(TRUE)
+#  appointment_covered       :boolean          default(TRUE)
+#  appointment_created       :boolean          default(TRUE)
+#  appointment_declined      :boolean          default(TRUE)
+#  appointment_edited        :boolean          default(TRUE)
+#  appointment_offered       :boolean          default(TRUE)
+#  appointment_reminder      :boolean          default(TRUE)
+#  appointment_scheduled     :boolean          default(TRUE)
+#  checklist_item_expiration :boolean          default(TRUE)
+#  interpreter_cancelled     :boolean          default(TRUE)
+#  sms                       :integer          default("no_sms")
+#  sms_number                :string
+#  created_at                :datetime         not null
+#  updated_at                :datetime         not null
+#  user_id                   :uuid
 #
