TK-404: Ability for Agency & Customer to cancel an appointment
- Add appointments controller route for cancelling an appointment
- Add dependent destroy on site.appointments
- Fix AppointmentPolicy initialization
- Add PolicyScope for scoping appointment statuses
- Create additional policy for appointment to check if user is allowed to perform cancel_appointment
- Rework appointments/_appointment_actions partial
- Position appointment actions button below content title
- Create AppointmentWorkflow module to manage the workflow of an appointment

--- a/test/fixtures/account_users.yml
+++ b/test/fixtures/account_users.yml
@@ -50,3 +50,27 @@ invited_user:
 fake_processor:
   account: fake_processor
   user: fake_processor
+
+agency_admin:
+  account: company
+  user: admin
+  roles:
+    agency_admin: true
+
+agency_member:
+  account: company
+  user: admin
+  roles:
+    agency_member: true
+
+customer_admin:
+  account: company
+  user: admin
+  roles:
+    customer_admin: true
+
+customer_member:
+  account: company
+  user: admin
+  roles:
+    customer_member: true
