add unique constraint to recipient's email-customer combo

--- a/test/fixtures/recipients.yml
+++ b/test/fixtures/recipients.yml
@@ -19,6 +19,7 @@
 # Indexes
 #
 #  index_recipients_on_customer_id  (customer_id)
+#  unique_email_customer_id         (email,customer_id) UNIQUE
 #
 # Foreign Keys
 #
