--- a/test/fixtures/providers.yml
+++ b/test/fixtures/providers.yml
@@ -17,9 +17,10 @@
 #
 # Indexes
 #
-#  index_providers_on_customer_id    (customer_id)
-#  index_providers_on_department_id  (department_id)
-#  index_providers_on_site_id        (site_id)
+#  index_providers_on_customer_id     (customer_id)
+#  index_providers_on_department_id   (department_id)
+#  index_providers_on_site_id         (site_id)
+#  unique_provider_email_customer_id  (email,customer_id) UNIQUE
 #
 # Foreign Keys
 #
@@ -31,13 +32,11 @@
 one:
   last_name: MyString
   first_name: MyString
-  email: MyString
+  email: Faker::Internet.unique.email
   primary_phone: MyString
   allow_text: false
   allow_email: false
   customer: company
-  
- 
 
 two:
   last_name: MyString
@@ -47,5 +46,3 @@ two:
   allow_text: false
   allow_email: false
   customer: company
-  
-
